--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,10 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-    
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
-    "scripts": {
+  "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
